<resources>
    <string name="app_name">Mashawery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tripaaaaaaaaawy</string>
    <string name="nav_header_subtitle">awez troh feeeen!!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_history">History</string>
    <string name="menu_upcomming">Upcomming</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>