<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_upcomming"
            android:icon="@drawable/upcomming"
            android:title="@string/menu_upcomming" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/sync"
            android:title="@string/menu_sync" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>