<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="344dp"
        android:layout_height="248dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:srcCompat="@drawable/image" />

    <TextView
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/purple_500"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="339dp"
        android:layout_height="53dp"
        android:paddingLeft="10dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/black"
        android:textSize="20dp" />
</LinearLayout>